--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.6.4",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "nodemailer": "^6.9.7"
   }
 }
