--- a/server/package.json
+++ b/server/package.json
@@ -10,20 +10,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bson": "^6.2.0",
+    "async": "^3.2.5",
+    "bson": "^6.6.0",
+    "cloudinary": "^2.2.0",
+    "connect": "^3.7.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-sessions": "^1.0.1",
-    "jsonwebtoken": "^9.0.0",
-    "kerberos": "^2.0.3",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.4",
+    "jsonwebtoken": "^9.0.2",
+    "kerberos": "^2.1.0",
+    "mime-types": "^2.1.35",
+    "mongodb": "^6.5.0",
+    "mongoose": "^7.6.11",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
-    "nodemailer": "^6.9.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "qs": "^6.12.1",
+    "razorpay": "^2.9.3",
+    "send": "^0.18.0",
+    "sliced": "^1.0.1"
   }
 }
